--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,7 @@
 .project
 target
 
+postgresql
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
