Adapt application to be deployed in Heroku

--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,26 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<env>
+							<BPE_OVERRIDE_JAVA_TOOL_OPTIONS>
+								-Xss256K
+								-XX:ReservedCodeCacheSize=64M 
+								-XX:MaxMetaspaceSize=100000K
+								-Xmx64M
+							</BPE_OVERRIDE_JAVA_TOOL_OPTIONS>
+						</env>
+					</image>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>	
 
 </project>
