--- a/heroku-webapp2-db/pom.xml
+++ b/heroku-webapp2-db/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>es.codeurjc</groupId>
-	<artifactId>springboot-postgresql-heroku</artifactId>
+	<artifactId>heroku-webapp2-db</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
